argocd/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-v3-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: devkubernetes.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-kubernetes-service
                port:
                  number: 80
    - host: devtrino.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-trino-service
                port:
                  number: 80
  tls:
    - hosts:
        - devkubernetes.duckdns.org
        - devtrino.duckdns.org
      secretName: dev-v3-ingress-tls
